# ref-type

./: .gitignore  CHANGE.md  Cargo.toml  MEMO.md  README.md  RefType.sln  memo.md  ref-0.tex  ref-1-example.tex  ref_type.tex
.github/: copilot-instructions.md
Documents/: TODO.md  USAGE.md  introduction_to_our_system.md  temp.tex
Documents/book/: book.toml  macros.txt
Documents/src/: A-note.tex  A-outline.tex  X-2-comp.tex  X-2.tex  X-3.tex  X-Base-example.tex  X-Base.tex  X-Comp.tex  Z-2.tex  a-note.tex  b-refine-old.tex  main.tex  main.typ  on_add_proof.typ  refine-example.tex  refine.tex  review.typ  system.typ
RefType.Core/: RefAction.fs  RefCore.fs  RefCore.fsproj  RefTools.fs
RefType.Test/: RefType.Test.fsproj  Tests.fs
core/: Cargo.toml
core/src/: ast.rs  command.rs  computation.rs  context.rs  core.rs  environment.rs  exp.pest  interpreter.rs  lambda_calculus.rs  lib.rs  parse.rs  printing.rs  program.pest  proving.pest  proving.rs  relation.rs  syntax.rs  typing.rs  utils.rs
doc/: TODO.md  ref-0.tex  ref-1.tex  type-theory-before.tex  type_theory.tex  untyped.tex
doc/book/: book.toml  macros.txt
doc/src/: X-1.tex  X-3.tex  a-type-theory.tex  main.tex  (+2 more)
src/: RefAction.fs  RefCore.fs  RefCore.fsproj  RefCore.fsx  RefTools.fs  USAGE.md  ast.pest  ast.rs  exp.pest  lambda_calculus.rs  lib.rs  main.rs  parse.rs  program.pest  reduction.rs  relation.rs  tests.rs
src/cli/: Cargo.toml  index.html
src/cli/src/: main.rs  printing.rs
src/cli/src/printing/: for_front.rs  for_kernel.rs
terminal/: Cargo.toml
tests/: hello_world.txt  test.sh
(+161 files in other folders)
