[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel" }
front = { path = "../front" }
either = "1.13.0"
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
